Finished functionality for 0.1.0. New command is finished and documented

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -7,6 +7,8 @@
   <title>Node.ts</title>
 </head>
 <body style="text-align: center; font-family: sans-serif">
+  <img alt="Node.ts' Logo" src="/images/node-ts.png">
   <h2>This is your first Node.ts API Server!</h2>
+  <a href="https://github.com/MatthewMawhinney/node.ts">To the github repo...</a>
 </body>
 </html>
