Added .prettierrc to git, built out default index.html, added README.md for new projects

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -6,9 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Node.ts</title>
 </head>
-<body style="text-align: center; font-family: sans-serif">
-  <img alt="Node.ts' Logo" src="/images/node-ts.png">
-  <h2>This is your first Node.ts API Server!</h2>
-  <a href="https://github.com/MatthewMawhinney/node.ts">To the github repo...</a>
+<body style="text-align: center; font-family: sans-serif; padding: 150px;">
+  <div style="max-width: 500px; margin: auto">
+    <img alt="Node.ts' Logo" src="/images/node-ts.png">
+    <h2>Welcome to your first Node.ts API Server!</h2>
+    <div style="background-color: lightblue; font-family: monospace; padding: 20px; margin: 25px;">
+      <p>Congrats, you've set up your own Node API server using Typescript and Express in less than 5 minutes!</p>
+      <p>Start adding your own routes and a database connection and you'll have a production ready API server up and running in no time.</p>
+    </div>
+    <div>If you need to reference the README, post an issue, fix a bug, or create an enhancement the <a href="https://github.com/mmwny/node.ts">repo is located here...</a></div>
+    <div style="font-size: 12px; margin-top: 25px;">
+      <p>Created by Matt Mawhinney</p>
+      <p>Github: <a href="https://github.com/mmwny">mmwny</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/matt-mawhinney-a3899413a/">Matt Mawhinney</a></p>
+      <p>2019</p>
+    </div>
+  </div>
 </body>
 </html>
